--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="java-interviews-exposed"/>
+	<classpathentry kind="src" path="Amazon"/>
+	<classpathentry kind="src" path="common-data-structure"/>
+	<classpathentry kind="src" path="Company"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
