--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,8 @@
 	<classpathentry kind="src" path="java-interviews-exposed"/>
 	<classpathentry kind="src" path="Amazon"/>
 	<classpathentry kind="src" path="common-data-structure"/>
-	<classpathentry kind="src" path="Company"/>
+	<classpathentry excluding="Macys/" kind="src" path="Company"/>
+	<classpathentry kind="src" path="Company/Macys"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
