--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,7 @@
 	<classpathentry kind="src" path="common-data-structure"/>
 	<classpathentry excluding="Macys/" kind="src" path="Company"/>
 	<classpathentry kind="src" path="Company/Macys"/>
+	<classpathentry kind="src" path="ctci"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
