--- a/OnlineVerifyProject/.classpath
+++ b/OnlineVerifyProject/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="junit"/>
+	<classpathentry kind="lib" path="/Users/huazhang/git/java-code/OnlineVerifyProject/junit/libs/minimal-json-0.9.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
